[package]
name = "caw"
version = "0.1.0"
authors = ["Denis BOURGE <bourge.denis@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 2

[dependencies]
rand = "0.7"
once_cell = "1.4"
ggez = "0.5"
gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"
image = "0.23.4"
imgui = "0.4.0"
imgui-gfx-renderer = "0.4.0"